assets/css/style.css
/* ... */
.infobar-text {
  margin-top: 8px;
  margin-right: 8px;
  margin-left: 8px;
}

.infobar-data-intro {
  text-align: center;
  font-style: normal;
  margin-top: 7px;
}

.infobar-data {
  font-weight: bold;
  font-size: 3em;
  text-align: center;
  font-style: normal;
}

.infobar-unit {
  text-align: center;
  font-style: normal;
}

.infobar-time {
  text-align: center;
  font-style: normal;
  color: gray;
}

#legend {
  position: fixed;
  z-index: 10;
  right: 10px;
  top: 10px;
  bottom: unset;
}

.custom-legend {
  margin: 0px;
}

.legend-circle {
  height: 20px;
  width: 20px;
  border-radius: 50%;
  display: inline-block;
  margin-right: -8px;
}

#legend-circle-container {
  display: inline-block;
  margin-right: 10px;
}

#legend-smell-value td {
  font-size: 11px;
  margin: 0;
}

#legend-smell-value .smell-color-td {
  color: black;
  min-width: 13px;
  max-width: 13px;
  height: 14px;
  background-repeat: no-repeat;
  background-size: 15px 15px;
  background-position: center;
}


#legend-smell-value .trax-td {
  border-radius: 50%;
  color: black;
  min-width: 5px;
  max-width: 5px;
  background-repeat: no-repeat;
  background-size: 5px 5px;
  background-position: center;
}

#legend-smell-value .trax-span {
  width: 6px;
  height: 6px;
  border-radius: 50%;
  float: left;
}

#legend-smell-value .opacity-75 {
  opacity: 75%;
}

#legend-smell-value .opacity-50 {
  opacity: 50%;
}

#legend-smell-value .opacity-25 {
  opacity: 25%;
}

#legend-smell-value .wind-arrow-td {
  color: black;
  background-repeat: no-repeat;
  background-size: 34px 18px;
  height: 18px;
  image-rendering: crisp-edges;
  image-rendering: -moz-crisp-edges;
  image-rendering: -o-crisp-edges;
  image-rendering: -webkit-optimize-contrast;
  -ms-interpolation-mode: nearest-neighbor;
}

.backtrace-color-map {
  border: 1px dashed black;
  padding: 10px;
  background-size: 95% 15px;
  background-repeat: no-repeat;
  background-image: url('../img/backtrace-color-map.png');
  background-position: center;
}

#legend-smell-value .entry-title {
  text-align: left;
}

.legend-label {
  color: gray;
  font-size: 9px;
}

.PM25-color-1 {
  background-image: url("../img/PM25_1_legend.png");
}

.PM25-color-2 {
  background-image: url("../img/PM25_2_legend.png");
}

.PM25-color-3 {
  background-image: url("../img/PM25_3_legend.png");
}

.PM25-color-4 {
  background-image: url("../img/PM25_4_legend.png");
}

.PM25-color-5 {
  background-image: url("../img/PM25_5_legend.png");
}

.trax-color-1 {
  background-color: #00e400;
}

.trax-color-2 {
  background-color: #ffff00;
}

.trax-color-3 {
  background-color: #ff7e00;
}

.trax-color-4 {
  background-color: #ff0000;
}

.trax-color-5 {
  background-color: #99004c;
}

.trax-color-6 {
  background-color: #7e0023;
}

.wind-arrow {
  background-image: url("../img/wind_arrow2.png");
}

.mobile-only-error {
  display: none;
}


@media screen and (max-width: 450px) {

  #infobar-initial {
    margin-top: 0px;
    margin-bottom: 25px;
  }

  .mobile-only-error {
    display: revert;
    padding-top: 10%;
    font-size: 14px;
  }

  #legend {
    bottom: 83px;
    top: unset;
  }

  #infobar {
    font-size: 15px;
    height: auto;
    width: 100%;
    width: -moz-available;          /* WebKit-based browsers will ignore this. */
    width: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
    width: fill-available;
    position: fixed;
    overflow: hidden;
    padding-bottom: 15px;
    -webkit-box-shadow: 0 5px 10px -5px rgba(0, 0, 0, 0.2), 0 8px 20px -10px rgba(0, 0, 0, 0.19);
            box-shadow: 0 5px 10px -5px rgba(0, 0, 0, 0.2), 0 8px 20px -10px rgba(0, 0, 0, 0.19);
    border-bottom-right-radius: 20px;
    border-bottom-left-radius: 20px;
  }

  #infobar-component-container {
    height: 100%;
    display: flex;
  }

  #infobar.maximized {
    height: 50%;
  }

  #infobar-header {
    font-size: 24px;
    margin-top: 7px;
    margin-bottom: 5px;
  }

  #infobar h2 {
    padding: 0;
    font-size: larger;
    margin-bottom: 0;
  }

  #infobar-close {
    display: none;
  }

  #infobar-close-handle {
    background-color: #bbbbbb;
    border-radius: 5px;
    height: 5px;
    width: 40px;
    position: absolute;
    bottom: 8px;
    right: calc(50% - 20px);
    display: block;
  }

  #infobar-close-handle-container {
    display: block;
    position: absolute;
    bottom: 0px;
    height: 40px;
    width: calc(100% - 30px);
    background: inherit;
  }

  #infobar-error-icon {
    width: 30px;
  }

  .infobar-component {
    float: left;
    width: 100%;
    height: auto;
    padding: 5px;
    border-top: none;
    border-right: 1px solid lightgray;
    border-left: 1px solid lightgray;
  }

  #infobar-plume-section {
    border-left: none;
  }

  #infobar-pollution-section sub {
    line-height: 0px;
  }

  .display-unset {
    display: unset !important;
  }

  #infobar-wind-section {
    border-right: none;
  }

  .infobar-component-header {
    font-size: medium;
    padding: 0 0 0 0;
  }

  .infobar-component-value {
    display: inline;
  }

  .infobar-text {
    display: none;
  }

  #infobar-plume .infobar-text {
    display: inline-block !important;
    text-align: center;
  }

  .infobar-data {
    padding-top: 3px;
    font-size: 2em;
  }

  .infobar-unit {
    font-size: 12px;
  }

  .infobar-time {
    font-size: 12px;
  }
}

.timeline-container {
  width: calc(100% - 70px);
  position: absolute;
  left: 57px;
  right: 0;
  top: auto;
  bottom: 0;
  height: 75px;
  width: auto;
  overflow-x: scroll;
  background-color: #fff;
  border-top: 1px solid #6e6e6e;
  scrollbar-color: #adadad #f1f1f1;
  scrollbar-width: auto;
}

.timeline-heatmap .timeline-heatmap-label td {
  color: black;
}


/*button:disabled,
button[disabled]{
  opacity: 0.2 !important;
}*/

#calendar-btn {
  position: absolute;
  left: 0;
  bottom: 0;
  z-index: 900;
  image-rendering: -webkit-optimize-contrast;
  -ms-interpolation-mode: nearest-neighbor;
  padding: 0px !important;
}
/* ... */

